style: apply aggressive mobile padding and fix 100vw horizontal overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
-  width: 100vw;
+  width: 100%;
 }
 
 /* Glassmorphism utility */
